[package]
name = "patrie_network"
version = "0.1.0"
edition = "2021"

[dependencies]
# 1. Web Server
actix-web = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 2. Database (Postgres)
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "bigdecimal"] }
uuid = { version = "1.4", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }

# 3. Blockchain (Hyperledger Iroha 2)
# Note: Check for the absolute latest version on crates.io or GitHub
iroha_client = "2.0.0-pre-rc.19"
iroha_data_model = "2.0.0-pre-rc.19"
iroha_config = "2.0.0-pre-rc.19"

# 4. HTTP Client (For Unit.co & Gusto APIs)
reqwest = { version = "0.11", features = ["json", "multipart"] }

# 5. Background Tasks (Cron Jobs)
tokio = { version = "1.28", features = ["full"] }
tokio-cron-scheduler = "0.9"

# 6. Utilities
eyre = "0.6"             # Error handling
dotenv = "0.15"          # Loading .env files
tracing = "0.1"          # Logging
tracing-subscriber = "0.3"